# rsoundio

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  circle.yml
examples/: sine.rs
src/: base.rs  ffi.rs  lib.rs  stream.rs
src/ffi/: enums.rs  functions.rs  mod.rs  structs.rs  utils.rs
tests/: basic.rs  callback.rs  stream.rs
