[package]
name = "rsoundio"
version = "0.1.0"
authors = ["Andreas Linz <klingt.net@gmail.com>"]
description = "libsoundio bindings for Rust"
keywords = ["audio", "stream", "recording"]
documentation = "https://docs.klingt.net/rustdoc/rsoundio"
repository = "https://git.klingt.net/alinz/rsoundio"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
